# osr-rover-code

./: .gitignore  .travis.yml  README.md  requirements.txt
.github/workflows/: python-app.yml
Arduino/: OsrScreen.cpp  OsrScreen.h  README.md
Emulation/: README.md  create_symlink.sh  dockerfile  roboclaw.py  roboclaw_emulator.py  roboclaw_params.yaml  roboclaw_wrapper.py
Init Scripts/: LaunchOSR.sh  osr_startup.service
OsrScreen/: OsrScreen.cpp  README.md
OsrScreen/examples/Osr_Screen/: Osr_Screen.ino
ROS/: README.md
ROS/led_screen/src/: arduino_comm.py  screen.py
ROS/osr/: CMakeLists.txt  package.xml
ROS/osr/scripts/: motor_controller.py  rover.py
ROS/osr/src/: joystick.py  motor_controller.py  roboclaw.py  roboclaw_wrapper.py  robot.py  rover.py
ROS/osr_bringup/: CMakeLists.txt  package.xml
ROS/osr_bringup/config/: osr_params.yaml  physical_properties.yaml  roboclaw_params.yaml
ROS/osr_bringup/launch/: .gitignore  osr.launch  osr_launch.py  osr_mod_launch.py
ROS/osr_control/: package.xml  setup.cfg  setup.py
ROS/osr_control/osr_control/: .roboclaw_wrapper.py.swp  ina_260_pub.py  joy_extras.py  led_control.py  roboclaw.py  roboclaw_wrapper.py  rover.py  servo_control.py  temp.txt
ROS/osr_control/src/: test_controller.py
ROS/osr_description/: Dockerfile  README.md  build.sh  exec.sh  osr_descr.rviz  package.xml  run.sh  setup.cfg  setup.py
ROS/osr_description/launch/: osr_rviz.launch.py
ROS/osr_description/osr_description/: state_publisher.py
ROS/osr_description/urdf/: config.json
ROS/osr_gazebo/: CMakeLists.txt  README.md  package.xml
ROS/osr_gazebo/config/: controller_velocity.yaml
ROS/osr_gazebo/launch/: controller.launch.py  empty_world.launch.py  osr_gazebo.launch.py  rviz.launch.py
ROS/osr_gazebo/meshes/: arm.stl  body_axis.stl  box_link.stl  rocker_bogie_final.stl  rocker_bogie_link_front.stl  rocker_bogie_link_middle.stl  rocker_bogie_link_rear.stl  turn_L.stl  turn_R.stl  turn_left_test.stl  turn_right_test.stl  wheel.stl  wheel_link_left_2.stl  wheel_link_right_2.stl  wheel_middle_left.stl
ROS/osr_gazebo/rviz/: rviz_settings.rviz
ROS/osr_gazebo/src/: osr_controller.cpp
ROS/osr_gazebo/urdf/: gazebo.urdf.xacro  insert_transmission.urdf.xacro  osr.urdf.xacro
ROS/osr_interfaces/: CMakeLists.txt  package.xml
ROS/osr_interfaces/msg/: CommandCorner.msg  Status.msg
ROS/osr_msgs/: CMakeLists.txt
ROS/osr_msgs/msg/: CommandDrive.msg  CommandDriveDuty.msg  Commands.msg  Status.msg
Simulation/src/rover_gazebo/: CMakeLists.txt  README.md  package.xml
Simulation/src/rover_gazebo/config/: ackermann_drive_controller.yaml  controllers.yaml  gazebo_pid_gains.yaml
Simulation/src/rover_gazebo/launch/: controller.launch  rover.launch  rover_gazebo.launch  rover_teleop_keyboard.launch  rover_teleop_xbox.launch  upload_robot.launch
Simulation/src/rover_gazebo/meshs/: rocker_bogie_link_middle.stl
Simulation/src/rover_gazebo/msg/: xbox.msg
Simulation/src/rover_gazebo/rviz/: rover.rviz
Simulation/src/rover_gazebo/src/: motor_controller.cpp  rover_xbox.cpp  xbox_joy.cpp
Simulation/src/rover_gazebo/urdf/: gazebo.urdf.xacro  rover.urdf.xacro
Simulation/src/rover_gazebo/worlds/: moon.world
Simulation/src/rover_gazebo/worlds/models/apollo17_landing_site_1000x1000/: model-1_4.sdf  model.config  model.sdf
config/: 60-i2c-tools.rules  90-serial.rules  serial_udev_ubuntu.rules  serial_udev_ubuntu1804.rules
init_scripts/: LaunchOSR.sh  README.md  launch_osr.sh  osr.service  osr_paths.sh  osr_startup.service
led/: Updater.py  screen.py
led_screen/: CMakeLists.txt  package.xml
led_screen/scripts/: arduino_comm.py
osr/: CMakeLists.txt  package.xml
osr/scripts/: rover.py
osr_msgs/: CMakeLists.txt  package.xml
osr_msgs/msg/: Commands.msg  Encoder.msg  Joystick.msg  Status.msg
rover/: arguments.py  config.json  connections.py  killAll.py  main.py  motorTest.py  motor_controller.py  osr.py  roboclaw.py  robot.py  rover.py  serialTest.py  xbox.py
rover/tests/: README.md  mocks.py  test_arguments.py  test_config.py  test_connections.py
scripts/: .gitignore  all_forward.py  calibrate_all_servos.sh  calibrate_servos.py  make_readme_pdf.sh  mapper.py  motor_map.json  one_address_m1.py  one_address_m2.py  rc_config.py  requirements.txt  roboclaw_movemotor.py  roboclawtest.py  rpi_estop_test.py  rpi_gpio_test.py  test_ina260.py  test_joystick.c  test_joystick.sh  test_pca9685.py
scripts/ina260/: ina260.py  ina260_test.py  requirements.txt  test_ina260.py
scripts/ina260/david_new/: INA260.py  ina260_45_short.py  ina260_pin_test.py  ina260_short.py  ina260_test.py
setup/: arduino.md  rover_bringup.md  rpi.md  rpi_raspbian.md  serial_config_info.md
