<?xml version="1.0"?>
<package format="2">
  <name>led_screen</name>
  <version>1.0.0</version>
  <description>Package to run the 16x32 LED Matrix on the Open Source Rover</description>
  <maintainer email="eric.junkins@jpl.nasa.gov">Eric Junkins</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/nasa-jpl/open-source-rover</url>
  <author email="eric.junkins@jpl.nasa.gov">Eric Junkins</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
