<?xml version="1.0"?>
<package format="2">
  <name>osr</name>
  <version>1.0.0</version>
  <description>The Open Source Rover ROS package </description>
  <maintainer email="eric.junkins@jpl.nasa.gov">Eric Junkins</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/nasa-jpl/open-source-rover</url>
  <author email="eric.junkins@jpl.nasa.gov">Eric Junkins</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python-serial</exec_depend>
  <depend>osr_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
