<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>osr_control</name>
  <version>0.0.0</version>
  <description>core nodes for control of the OSR</description>
  <maintainer email="achille.verheye@gmail.com">Achille</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>osr_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
